fix: navbar collapse fix

--- a/Components/navbar.css
+++ b/Components/navbar.css
@@ -112,7 +112,8 @@
     right: 10;
     cursor: pointer;
   }
-  #menu-icon:checked ~ .nav-content{
+  #menu-icon:checked ~ .nav-content,
+  #menu-icon:checked ~ .nav-end{
     transition: all 2s ease;
     display: none;
   }
